# nexus-agent

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  registry.py
docs/: DESIGN.md
src/: config.py
src/agent/: __init__.py  stream_response.py  widget_context.py  widget_discovery.py
src/utils/: logging.py  sse.py
src/vianexus/: __init__.py  dataset.py  dividends.py  news.py  quote.py  schemas.py
src/widgets/: __init__.py  dividends_table.py  news.py  rules.py  stock_chart.py  stock_stats.py  table.py
tests/: __init__.py  test_stream_response.py
